# cpp_tamplate

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: Cache.cmake  CompilerWarnings.cmake
lib/: CMakeLists.txt
lib/src/: mylib.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
